# RA-3-maps

./: .gitignore  ALL_1V1_BASES_VS_ARCHON_DIFF.md  ALL_BASES_VS_ARCHON_DIFF.md  BLEND_MODEL_IMPROVEMENT_STRATEGY.md  COMMON_AND_UNIQUE_DIFFS.md  COMMON_AND_UNIQUE_DIFFS_1V1.md  HF_BASE_VS_ARCHON_DIFF.md
archon_transformer/_internal/: batch_convert.py  build.bat  pyproject.toml
python_tools/: .gitignore  BIT_PERFECT_STATUS.md  PYTHON_IMPLEMENTATION_STATUS.md  README.md  all_object_types.json  categorized_object_types.json  per_map_v14.json  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  run_generate_all.bat  verify_blend_rules.py
python_tools/docs/: AI_TRAINING_DATA_CATALOG.md  LLM_MAP_SPEC_SCHEMA.md  MAP_DATA_SCHEMA.md  TEXT_TO_MAP_PIPELINE.md  architecture_research_2026-05.md
python_tools/examples/: parser_config_example.py
python_tools/map_processor/: __init__.py  constants.py  height_map_data.py  map_visualizer.py  ra3map.py  refpack.py
python_tools/reports/: object_types_deep_scan.json  object_types_deep_scan.md
python_tools/scripts/: analyze_blend_patterns.py  analyze_controller_survival.py  analyze_propagation_stopping.py  analyze_waypoints.py  audit_object_categorization.py  browse_styles.py  build_biome_lookup.py  build_cluster_inventory.py  check_heights.py  check_rotated_blends.py  cluster_map_styles.py  compare_archon_map.py  compare_ban_mode.py  compare_blends_detailed.py  compare_maps_comprehensive.py  compose_map.py  create_csharp_cli_placeholder.md  crf_postprocess.py  curate_training_set.py  debug_feature_extractor.py  deep_scan_object_types.py  diff_1v1_bases_vs_archon.py  diff_all_bases_vs_archon.py  diff_blends.py  diff_hf_base_vs_archon.py  diff_objects_unique_ids.py  dump_map_data.py  eval_unet_vs_baseline.py  extract_blend_dataset.py  extract_common_and_unique_diffs.py  extract_common_and_unique_diffs_1v1.py  final_validation.py  find_seed_rules.py  full_map_analysis.py  generate_blendinfo_dataset.py  generate_complete_spec.py  generate_map_catalog.py  generate_map_image.py  map_image_codec.py  map_lossless_codec.py  (+36 more)
python_tools/tests/: __init__.py  conftest.py  test_all_assets.py  test_bit_perfect.py  test_exact_match_rao1.py  test_exact_reconstruction.py  test_map_parsing.py  test_map_reconstruction.py  test_map_rotation.py  test_map_visualization.py  test_pipeline.py
ra3_map_toolkit/_internal/: build.bat  (+14 more)
(+266 files in other folders)
