[project]
name = "ra3-map-processor"
version = "0.1.0"
description = "Pure Python implementation for parsing and reconstructing RA3 map files"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pillow>=10.0.0",
    "h5py>=3.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
gpu = [
    # Use a prebuilt CUDA wheel package (avoids attempting to build `cupy` from source).
    # Requires an NVIDIA GPU + compatible driver.
    "cupy-cuda12x>=13.0.0",
]
ml = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "accelerate>=0.31.0",
    "safetensors>=0.4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

