[project]
name = "archon-transformer"
version = "1.0.0"
description = "Transform RA3 maps to Archon mode - No Python required!"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[tool.pyinstaller]
# PyInstaller configuration
name = "archon_converter"
onefile = true
console = true

