[project]
name = "ra3-map-toolkit"
version = "1.0.0"
description = "Transform RA3 maps: Archon mode + OMV variations. No Python required."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[tool.pyinstaller]
# PyInstaller configuration
name = "ra3_engine"
onefile = true
console = true

